<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MathQuizActivity">

    <TextView
        android:id="@+id/tvMath_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQuiz_math"
        style="@style/textStyleTitle"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvMath_example"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="2 + 2 = ?"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/peach"
        android:layout_marginTop="95dp"
        android:gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvMath_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <EditText
        android:id="@+id/etMathQuiz"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@color/gray"
        android:hint="@string/etMath_answer"
        android:textSize="25dp"
        android:gravity="center"
        android:inputType="number"
        android:singleLine="true"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvMath_example"/>

    <TextView
        android:id="@+id/tvCurrentQuestionMath"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentQuestion"
        style="@style/textStyleTitle"
        android:gravity="center"
        android:layout_marginTop="80dp"
        app:layout_constraintTop_toBottomOf="@id/etMathQuiz"
        app:layout_constraintBottom_toTopOf="@id/btnNextMath"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btnNextMath"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        style="@style/btnStyle"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentQuestionMath"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>








</androidx.constraintlayout.widget.ConstraintLayout>