<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.HistoryActivity">

    <TextView
        android:id="@+id/tvHistory_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHistory"
        style="@style/textStyleTitle"
        android:layout_marginTop="25dp"
        android:layout_marginStart="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/tvH_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHistory_points"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvHistory_title"
        app:layout_constraintTop_toBottomOf="@+id/tvHistory_title"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvH_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvHistory_question"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvH_1"
        app:layout_constraintTop_toBottomOf="@+id/tvH_1"
        android:layout_marginTop="15dp"/>

    <TextView
        android:id="@+id/tvAllPoints"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="60"
        android:textSize="25sp"
        android:textColor="@color/peach"
        style="@style/textStyleTitle"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tvH_1"
        app:layout_constraintStart_toEndOf="@id/tvH_1"
        app:layout_constraintTop_toTopOf="@id/tvH_1"/>

    <TextView
        android:id="@+id/tvAllQuestions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        android:textSize="25sp"
        android:textColor="@color/peach"
        style="@style/textStyleTitle"
        android:layout_marginLeft="15dp"
        app:layout_constraintBottom_toBottomOf="@id/tvH_2"
        app:layout_constraintStart_toEndOf="@id/tvH_2"
        app:layout_constraintTop_toTopOf="@id/tvH_2"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvHistory"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvH_2"
        tools:listitem="@layout/item_history"/>



</androidx.constraintlayout.widget.ConstraintLayout>