<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/peach"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/menu"
        android:textColor="@color/white"
        style="@style/textStyleTitle"
        android:layout_marginStart="25dp"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvUserNameMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/userName_menu"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/tvMenu"
        app:layout_constraintTop_toBottomOf="@+id/tvMenu" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="25dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvUserNameMenu"
>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvStartQuiz"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="35dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/cardViewStyle">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/start" />

                <TextView
                    style="@style/textStyleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tvStart"
                    android:textSize="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvRule"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintEnd_toStartOf="@id/cvHistory"
            app:layout_constraintStart_toStartOf="@id/cvStartQuiz"
            app:layout_constraintTop_toBottomOf="@id/cvStartQuiz">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/rule" />

                <TextView
                    style="@style/textStyleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvRule"
                    android:textSize="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cvHistory"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="20dp"
            android:layout_marginTop="15dp"
            app:layout_constraintBottom_toBottomOf="@id/cvRule"
            app:layout_constraintEnd_toEndOf="@id/cvStartQuiz"
            app:layout_constraintStart_toEndOf="@id/cvRule"
            app:layout_constraintTop_toTopOf="@id/cvRule">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/history" />

                <TextView
                    style="@style/textStyleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/tvHistory"
                    android:textSize="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:id="@+id/cvLogOut"
            style="@style/cardViewStyle"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_margin="35dp"
            app:layout_constraintEnd_toEndOf="@id/cvHistory"
            app:layout_constraintStart_toStartOf="@+id/cvRule"
            app:layout_constraintTop_toBottomOf="@id/cvRule">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:src="@drawable/exit" />

                <TextView
                    style="@style/textStyleTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="20dp"
                    android:text="@string/tvExit"
                    android:textSize="20dp" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>