<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.QuizActivity">


    <TextView
        android:id="@+id/tvQuizTitle"
        style="@style/textStyleTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvQuiz_title"
        android:layout_margin="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cvQuizMath"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvQuizTitle"
        style="@style/cardViewStyle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/math" />

            <TextView
                style="@style/textStyleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/tvQuiz_math"
                android:textSize="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>



    <androidx.cardview.widget.CardView
        android:id="@+id/cvQuizGeog"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:layout_margin="35dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cvQuizMath"
        style="@style/cardViewStyle">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:src="@drawable/geog" />

            <TextView
                style="@style/textStyleTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:text="@string/tvQuiz_geog"
                android:textSize="20dp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>