<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.GeoQuizActivity">


        <TextView
            android:id="@+id/tvGeo_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvQuiz_geog"
            style="@style/textStyleTitle"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>


        <TextView
            android:id="@+id/tvGeo_question"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Где находится Бразилия?"
            android:textSize="30sp"
            android:textColor="@color/black"
            android:layout_marginTop="95dp"
            android:gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:layout_constraintTop_toBottomOf="@+id/tvGeo_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    <RadioGroup
        android:id="@+id/radioGroupGeo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:checkedButton="@id/radioBtn1"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintTop_toBottomOf="@id/tvGeo_question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/radioBtn1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Answer 1"
            android:buttonTint="@color/peach"/>

        <RadioButton
            android:id="@+id/radioBtn2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Answer 2"
            android:buttonTint="@color/peach"/>

        <RadioButton
            android:id="@+id/radioBtn3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Answer 3"
            android:buttonTint="@color/peach"/>


        <RadioButton
            android:id="@+id/radioBtn4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Answer 4"
            android:buttonTint="@color/peach"/>


    </RadioGroup>

    <TextView
        android:id="@+id/tvCurrentQuestionGeo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrentQuestion"
        style="@style/textStyleTitle"
        android:gravity="center"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/radioGroupGeo"
        app:layout_constraintBottom_toTopOf="@id/btnNextGeo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>


    <Button
        android:id="@+id/btnNextGeo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        style="@style/btnStyle"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="100dp"
        android:layout_marginRight="100dp"
        app:layout_constraintTop_toBottomOf="@id/tvCurrentQuestionGeo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>










</androidx.constraintlayout.widget.ConstraintLayout>